# noether-py

./: README.md  pyproject.toml
noether_api/: __init__.py  client.py
src/: __init__.py
src/noether_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
